Migrated project to typescript made some changes for it to work

--- a/personalwebsite/index.html
+++ b/personalwebsite/index.html
@@ -9,6 +9,6 @@
   <!--Custom background colour off whiteish blue-->
   <body class="bg-[#fbf9ff] font-sans]">
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
