--- a/personalwebsite/index.html
+++ b/personalwebsite/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/bigV.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Vito Carnovale</title>
   </head>
   <!--Custom background colour off whiteish blue-->
   <body class="bg-[#fbf9ff] font-sans]">
